2006-10-12  Carlos Garnacho  <carlosg@gnome.org>

	beginnings of a really lightweight dispatcher written in C, this way
	the modules will only be loaded when necessary, reducing memory usage
	and allowing to develop modules in other languages than Perl.

	* dispatcher/dispatcher.c, Makefile.am: added, first draft of the
	dispatcher, it already forwards messages and sends replies back and
	tries to raise modules in the session bus

	* Makefile.am: add the dispatcher directory.

	* configure.in: require GLib to build the dispatcher, maybe this dep
	could be dropped at some point in the future, if I don't feel too
	lazy...

	* Utils/Backend.pm: remove --no-daemon and --session-bus parameters,
	should be no longer needed. Add --disable-shutdown for testing
	purposes, as modules are supposed to shutdown automatically after some
	inactivity. Add --module parameter to raise a configuration module.

	* GroupsConfig.pm, HostsConfig.pm, IfacesConfig.pm, NFSConfig.pm,
	NTPConfig.pm, SMBConfig.pm, ServicesConfig.pm, TimeConfig.pm,
	UsersConfig.pm: create the DBus object by themselves.

	* SystemToolsBackends.pl.in: do not create all the DBus objects, just
	the one we want to raise, this way the script becomes a loader for
	services instead of a service itself.

2006-10-12  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: expand properly datadir and sysconfdir

2006-10-09  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm: don't corrupt wireless essid and key.

2006-10-06  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.7

2006-10-06  Carlos Garnacho  <carlosg@gnome.org>

	* IfacesConfig.pm, Network/Ifaces.pm: save/restore gateway settings
	for static interfaces.
	* configure.in: preemptively bump minor number.

2006-10-05  Carlos Garnacho  <carlosg@gnome.org>

	Ported to 1.9.x a huge and incredible patch by Darren Kenny  
	<Darren.Kenny@Sun.COM> and Erast Benson  <erast@gnusolaris.com> 
	to make s-t-b recognize and configure SunOS based systems.
