@@ -1,3 +1,8 @@
+2006-10-13  Carlos Garnacho  <carlosg@gnome.org>
+
+	* dispatcher/dispatcher.c (daemonize): added, function to make the 
+	dispatcher become a daemon.
+
 2006-10-12  Carlos Garnacho  <carlosg@gnome.org>
 
 	beginnings of a really lightweight dispatcher written in C, this way
